--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,13 @@ body {
     -moz-osx-font-smoothing:grayscale;
     line-height: 1.45;
 }
+body {
+    display: flex;
+    flex-direction: column;
+}
+main {
+    flex: 1;
+}
 .static-color{
     color: var(--text) !important;
 }
