--- a/css/Individual_Project.css
+++ b/css/Individual_Project.css
@@ -63,7 +63,7 @@
     padding: 0;
     white-space: pre-wrap;
     font-family: Consolas, monospace;
-    color: var(--text);
+    color: inherit;
 }
 
 
